--- a/css/main.scss
+++ b/css/main.scss
@@ -34,6 +34,8 @@ $img-break:        620px;
 $people-break:     595px;
 $research-break:   840px;
 $pub-break:           763px;
+$footer-break:        720px;
+$software-break:     580px;
 
 
 
